2008-04-30  David Hansen  <david.hansen@gmx.net>

	* dired.el: Require 'cl.

2008-04-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frame-handler-1): Make overlay arrow
	hollow if not in innermost frame.

2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make `checkout-model' apply to filesets.
	* vc-hooks.el (vc-checkout-model): Rewrite.
	(vc-before-save, vc-after-save): Adjust callers accordingly.
	* vc.el (vc-editable-p, vc-next-action, vc-checkout, vc-update)
	(vc-transfer-file): Adjust callers accordingly.
	* vc-rcs.el (vc-rcs-checkout-model): Adjust arg.
	(vc-rcs-state, vc-rcs-state-heuristic, vc-rcs-receive-file)
	(vc-rcs-checkout, vc-rcs-fetch-master-state): Use vc-rcs-checkout-model
	instead of vc-checkout-model.
	* vc-mcvs.el (vc-mcvs-revert):
	Use vc-mcvs-checkout-model i.s.o vc-checkout-model.
	* vc-cvs.el (vc-cvs-checkout-model): Adjust arg.
	(vc-cvs-revert): Use vc-cvs-checkout-model i.s.o vc-checkout-model.
	* vc-svn.el (vc-svn-checkout-model):
	* vc-hg.el (vc-hg-checkout-model):
	* vc-git.el (vc-git-checkout-model):
	* vc-bzr.el (vc-bzr-checkout-model): Adjust arg.

	* dired.el (dired-read-dir-and-switches): Replace last change with
	a new approach that mixes read-file-name and read-directory-name.

	* files.el (read-buffer-to-switch):
	Avoid making assumptions about `other-buffer'.

2008-04-29  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-mode-hook): Add normal hook.
	(vc-dir-mode): Run it.

2008-04-29  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-display-buffer): Don't pop up GUD buffer.
	Always split windows.
	(gdb-speedbar-timer-fn): Only raise frame after user input.
	(gdb-same-frame): Reverse initial value.
	(gdb-display-gdb-buffer): Check for GUD buffer in other frames.

	* progmodes/gud.el (gud-speedbar-buttons): Raise frame in
	gdb-speedbar-timer-fn.

2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el (uniquify-rationalize-a-list): Beware of side-effects.
